@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/gtk-doc
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.97 2008/06/06 14:57:39 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.98 2008/06/15 22:21:12 eva Exp $
+
+  15 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org> gtk-doc-1.8-r2.ebuild,
+  gtk-doc-1.10-r1.ebuild, gtk-doc-1.10-r2.ebuild:
+  add glib to RDEPEND, bug #227309. Drop mips to ~arch to silence repoman.
 
 *gtk-doc-1.10-r2 (06 Jun 2008)
 
